@@ -1,3 +1,7 @@
+2011-08-24  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/match.c: Fix for 'Trailing backslash' error
+	* common-src/match-test.c: Add test
+
 2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* amandad-src/amandad.c, client-src/calcsize.c,
 	  client-src/killpgrp.c, client-src/noop.c,
